@@ -1,4 +1,7 @@
 Version 1.3.3 - xx xxx 2009
+  
+  * SWIG 1.3.39 uses feature Generics for C# and Mono MCS
+    doesn't handle that. Ticket #109.
 
 Version 1.3.2 - 05 Jun 2009
 
